<resources>
    <string name="app_name">MainActivity</string>
    <string name="text_hello">Привет</string>
    <string name="text_world">Мир</string>
    <string name="hello_blank_fragment">Empty Fragment</string>

    <string name="text_button_one">Кнопки и табуретки</string>
    <string name="text_button_two">Поля выпаса ввода</string>
    <string name="text_button_three">Четбокс на радио</string>

    <style name="Button">
        <item name="android:layout_width">250dp</item>
        <item name="android:layout_height">50dp</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:textAllCaps">false</item>
    </style>

    <style name="TextView">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:layout_marginTop">20dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>

    </style>
</resources>