<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity" >


    <TextView style="@style/TextView"
        android:text="@string/text_hello" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/hello_world" />

    <TextView style="@style/TextView"
        android:id="@+id/text_two"
        android:text="@string/text_world"/>

    <Button style="@style/Button"
        android:id="@+id/button_one"
        android:rotationX="2"
        android:text="@string/text_button_one" />

    <Button style="@style/Button"
        android:id="@+id/button_two"
        android:text="@string/text_button_two" />

    <Button style="@style/Button"
        android:id="@+id/button_three"
        android:text="@string/text_button_three" />

</LinearLayout>